refactor(文件结构): 重新组织项目文件结构
- 更新函数式组件文件名称为 1.函数式组件.html
- 更新 state 更新文件名称为 2.state更新.html
- 删除不必要的示例文件：
  - state状态提升.html  - state简化.html
  - 我是你爹.html
- 在函数式组件中添加模块化和组件化的注释
- 移

--- a/02-组件/1.函数式组件.html
+++ b/02-组件/1.函数式组件.html
@@ -25,7 +25,10 @@
 
 <!--这里使用了babel用来解析jsx语法-->
 <script type="text/babel">
-        // 1.创建函数式组件 
+        // 模块 一般是一个js文件
+        // 组件 一般是html、css、js的组合
+        // 模块化、组件化、工程化
+        // 1.创建函数式组件
         function Demo(){
             console.log(this); //这个this是undefined,因为babel编译之后开启了严格模式
             return <h2>w shi yi ge zu jian</h2>
