refactor(05-ref):重构 ref 相关示例- 重命名字符串形式、回调形式和 API 文件，使其更具描述性 - 在字符串形式示例中添加注释，说明 this.refs 的使用 - 在回调形式示例中添加注释，解释回调绑定的优势 - 更新 API 示例，添加 createRef 的使用说明

--- a/05-ref/2.回调形式.html
+++ b/05-ref/2.回调形式.html
@@ -24,18 +24,32 @@
 
     class Dom extends React.Component{
 
+        state = {isHot:true};
+
         btnOnClick = () =>{
-            alert(this.refs.dian.value);
+            alert(this.dian.value);
         }
         inputBlur = () =>{
-            alert(this.refs.shiqu   .value);
+            alert(this.shiqu.value);
+        }
+        btnOnClick2 = () =>{
+            this.setState({isHot:!this.state.isHot});
+        }
+        // 写成回调的绑定方式可以避免render时ref回调重复执行的问题，但是这个问题无关紧要
+        isRef = (self) =>{
+            console.log(self);
+            this.dian = self;
+            console.log("sss")
         }
         render(){
+            //回调形式的ref 在ref中执行回调函数，将自身作为参数传递给回调函数
             return (
                 <div>
-                    <input ref="dian" type="text" placeholder="点击弹出" />&nbsp;
+                {/*<input ref={self =>{ this.dian = self;console.log(self)}} type="text" placeholder="点击弹出" />&nbsp;*/}
+                <input ref={this.isRef} type="text" placeholder="点击弹出" />&nbsp;
                     <button onClick = {this.btnOnClick}>点击</button>&nbsp;
-                    <input ref="shiqu" onBlur={this.inputBlur} type="text" placeholder="失去焦点弹出弹出" />
+                    <button onClick = {this.btnOnClick2}>点击</button>&nbsp;
+                    <input ref={self => this.shiqu = self} onBlur={this.inputBlur} type="text" placeholder="失去焦点弹出弹出" />
                 </div>
             )
         }
