--- a/05-ref/1.字符串形式.html
+++ b/05-ref/1.字符串形式.html
@@ -24,31 +24,19 @@
 
     class Dom extends React.Component{
 
-        state = {isHot:true};
-
         btnOnClick = () =>{
-            alert(this.dian.value);
+            // this.refs.dian拿到的是真实DOM
+            alert(this.refs.dian.value);
         }
         inputBlur = () =>{
-            alert(this.shiqu.value);
-        }
-        btnOnClick2 = () =>{
-            this.setState({isHot:!this.state.isHot});
-        }
-        isRef = (self) =>{
-            console.log(self);
-            this.dian = self;
-            console.log("sss")
+            alert(this.refs.shiqu.value);
         }
         render(){
-            //回调形式的ref 在ref中执行回调函数，将自身作为参数传递给回调函数
             return (
                 <div>
-                {/*<input ref={self =>{ this.dian = self;console.log(self)}} type="text" placeholder="点击弹出" />&nbsp;*/}
-                <input ref={this.isRef} type="text" placeholder="点击弹出" />&nbsp;
+                    <input ref="dian" type="text" placeholder="点击弹出" />&nbsp;
                     <button onClick = {this.btnOnClick}>点击</button>&nbsp;
-                    <button onClick = {this.btnOnClick2}>点击</button>&nbsp;
-                    <input ref={self => this.shiqu = self} onBlur={this.inputBlur} type="text" placeholder="失去焦点弹出弹出" />
+                    <input ref="shiqu" onBlur={this.inputBlur} type="text" placeholder="失去焦点弹出弹出" />
                 </div>
             )
         }
